# groundnote

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_STATE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PROJECT_SPEC.md  PROJECT_STATE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.streamlit/: config.toml
docs/: architecture.md  chunking-strategy.md  citations-and-language.md  configuration.md  database-schema.md  demo-script.md  demo-workflow.md  document-processing.md  embedding-and-indexing.md  foundry-local-setup.md  model-benchmark.md  model-lifecycle-performance.md  packaging-strategy.md  phase-7-1-stabilization.md  phase-7-2-1-real-test-stability.md  phase-7-2-2-section-retrieval-ui-stability.md  phase-7-2-optimization.md  phase-8-knowledge-base-session-management.md  phase-9-1b-model-lifecycle-performance.md  phase-9-1c-multi-file-upload-queue.md  phase-9-packaging-release.md  pre-embedding-ingestion.md  presentation-outline-en.md  presentation-outline-tr.md  prompt-safety.md  rag-generation.md  release-checklist.md  semantic-retrieval.md  streamlit-interface.md  supported-documents.md
examples/: demo-questions.md  groundnote-demo-handbook.md
scripts/: benchmark_indexing.py  benchmark_models.py  benchmark_upload_queue.py  build_release_archive.ps1  check_foundry.py  doctor.ps1  setup_windows.ps1  smoke_ui_pipeline.py  smoke_ui_real.py  start_groundnote.ps1  stop_groundnote.ps1
src/groundnote/: app.py  (+5 more)
tests/: __init__.py  test_import.py
(+170 files in other folders)
