[project]
name = "groundnote"
version = "0.9.0"
description = "Private, offline RAG study assistant powered by Microsoft Foundry Local."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "GroundNote Contributors" }
]
dependencies = [
  "streamlit",
  "pydantic",
  "pydantic-settings",
  "numpy",
  "structlog",
  "platformdirs",
  "pypdf",
  "python-docx",
  "python-dotenv",
  "foundry-local-sdk-winml; sys_platform == 'win32'",
  "foundry-local-sdk; sys_platform == 'darwin'",
  "openai",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/groundnote/rag/service.py" = ["E501"]
"src/groundnote/ui/text.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
markers = [
  "foundry: requires Microsoft Foundry Local models and may download local model files",
]
